# embedded

./: .gitignore  LICENSE  README.md
src/: Modelfile
src/embassy-hid/: Cargo.toml  README.md
src/embassy-hid/.cargo/: config.toml
src/embassy-test/: Cargo.toml  README.md
src/rtic-hid/: Cargo.toml  Embed.toml  README.md  build.rs  joystic_y_axis.ipynb  main.py  pyproject.toml
src/rtic-hid/mechanical/: hall_effect_jig.scad  two_magnets_jig.scad
src/rtic-hid/src/: lib.rs
src/rtic-hid/src/hid/: types.rs
src/rtic-test/: Cargo.toml  README.md
