[package]
name = "embassy-test"
edition = "2024"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [
  "defmt",
  "stm32f103c8",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
] }

embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  #  "integrated-timers",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }

defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.0.0" }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.2", default-features = false }

nb = "1.1.0"
#static_cell = "2.0.0"
panic-halt = "1.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
