[package]
name = "rtic-blinky"
edition = "2021"
version = "0.1.0"

[workspace]

[dependencies]

rtic = { version = "2.1.2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }

#cortex-m-rt = "0.7.5"
embedded-hal = "1.0"

stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.0.0" }

panic-rtt-target = { version = "0.2" }
rtt-target = { version = "0.6" }

nb = "1.1.0"
#static_cell = "2.0.0"
panic-halt = "1.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
